--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-napi-ohos        = { version = "1.0.0-beta.3" }
-napi-derive-ohos = { version = "1.0.0-beta.3" }
-ada-url = "3.0.0"
+napi-ohos        = { version = "1.0" }
+napi-derive-ohos = { version = "1.0" }
+ada-url = "3.1.0"
 
 [build-dependencies]
-napi-build-ohos = { version = "1.0.0-beta.3" }
+napi-build-ohos = { version = "1.0" }
 
 [profile.release]
 lto = true
