--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name    = "ada-ohos"
+name = "ada-ohos"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,9 +9,9 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-napi-ohos        = { version = "1.0" }
+napi-ohos = { version = "1.0" }
 napi-derive-ohos = { version = "1.0" }
-ada-url = "3.1.0"
+ada-url = { version = "3.2.4" }
 
 [build-dependencies]
 napi-build-ohos = { version = "1.0" }
